<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorLightBrown">

    <ImageView
        android:id="@+id/imageView"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:srcCompat="@mipmap/logo4_foreground"
        android:contentDescription="@string/logo" />


    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:gravity="center"
        android:textSize="36sp"
        android:textColor="@color/colorDarkBrown" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_user"
        android:importantForAutofill="no"
        android:textColor="@color/colorDarkBrown" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/hint_pass"
        android:importantForAutofill="no"
        android:textColor="@color/colorDarkBrown" />

    <Button
        android:id="@+id/buttonOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_order"
        android:textColor="@color/colorDarkBrown"
        android:onClick="coffeeOrder" />

</LinearLayout>