<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseActivity"
    android:background="@color/colorLightBrown">

    <TextView
        android:id="@+id/tvChooseDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@color/colorDarkBrown"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <RadioGroup
        android:id="@+id/rgDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvChooseDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <RadioButton
            android:id="@+id/rbTea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tea"
            android:textColor="@color/White"
            android:checked="true"
            android:onClick="changeDrink"
            />

        <RadioButton
            android:id="@+id/rbCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coffee"
            android:textColor="@color/White"
            android:onClick="changeDrink"/>

    </RadioGroup>
    <TextView
        android:id="@+id/tvChooseAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@color/colorDarkBrown"
        app:layout_constraintTop_toBottomOf="@+id/rgDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"/>
    <CheckBox
        android:id="@+id/cbMilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvChooseAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cbSugar"
        android:text="@string/milk"
        android:textColor="@color/White"
        android:layout_margin="8dp"/>

    <CheckBox
        android:id="@+id/cbSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvChooseAdd"
        app:layout_constraintStart_toEndOf="@id/cbMilk"
        app:layout_constraintEnd_toStartOf="@id/cbLemon"
        android:text="@string/sugar"
        android:textColor="@color/White"
        android:layout_margin="8dp"/>
    <CheckBox
        android:id="@+id/cbLemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvChooseAdd"
        app:layout_constraintStart_toEndOf="@id/cbSugar"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/lemon"
        android:textColor="@color/White"
        android:layout_margin="8dp"/>
    <TextView
        android:id="@+id/tvChooseTypeOfDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@color/colorDarkBrown"
        app:layout_constraintTop_toBottomOf="@+id/cbLemon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"/>
    <Spinner
        android:id="@+id/spTea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvChooseTypeOfDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible"
        android:entries="@array/type_of_tea"
        android:textColor="@color/White"
        android:layout_margin="8dp"/>

    <Spinner
        android:id="@+id/spCoffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvChooseTypeOfDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        android:entries="@array/type_of_coffee"
        android:textColor="@color/White"
        android:layout_margin="8dp"/>

    <ImageView
        android:id="@+id/ibOrder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/button"
        android:onClick="orderSum"
        android:src="@mipmap/button_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spTea"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>